# rescoyl

./: Dockerfile  LICENSE  Makefile  README.md  build.sh  generate-certificate.sh  integration.sh  rescoyl.cabal  run-integration.sh  sample.public-images  sample.users  test.sh
Rescoyl/: Handlers.hs  Simple.hs  Types.hs  Utils.hs
nginx/: registry.local  registry2.local  rescoyl.local
