name:                rescoyl
version:             0.2.2
Cabal-Version:       >= 1.8
synopsis:            A private Docker registry
description:         A private Docker registry
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

library
  build-depends:       aeson == 0.6.*,
                       base == 4.*,
                       base64-bytestring == 1.0.*,
                       binary == 0.7.*,
                       bytestring == 0.9.*,
                       containers == 0.4.*,
                       directory >= 1.1 && < 1.3,
                       enumerator == 0.4.*,
                       filepath == 1.3.*,
                       lens == 3.9.*,
                       MonadCatchIO-transformers == 0.3.*,
                       pwstore-fast,
                       SHA == 1.6.*,
                       snap == 0.11.*,
                       snap-core == 0.9.*,
                       temporary == 1.1.*,
                       text == 0.11.*,
                       unix == 2.5.*
  exposed-modules:     Rescoyl.Handlers,
                       Rescoyl.Simple,
                       Rescoyl.Types,
                       Rescoyl.Utils
  other-modules:
                       Paths_rescoyl
  ghc-options:         -Wall

executable rescoyl
  hs-source-dirs:      bin
  main-is:             rescoyl.hs
  build-depends:       base == 4.*,
                       cmdargs == 0.9.*,
                       bytestring == 0.9.*,
                       containers == 0.4.*,
                       directory >= 1.1 && < 1.3,
                       MonadCatchIO-transformers == 0.3.*,
                       rescoyl,
                       snap == 0.11.*,
                       snap-server == 0.9.*,
                       text == 0.11.*
  ghc-options:         -Wall
                       -threaded
