name:                rescoyl
version:             0.3.0
Cabal-Version:       >= 1.8
synopsis:            A private Docker registry
description:         A private Docker registry
category:            System
license:             BSD3
license-file:        LICENSE
author:              Vo Minh Thu
maintainer:          thu@hypered.io
build-type:          Simple

library
  build-depends:       aeson,
                       base == 4.*,
                       base64-bytestring,
                       binary,
                       bytestring,
                       containers,
                       directory,
                       enumerator,
                       filepath,
                       lens,
                       MonadCatchIO-transformers,
                       mtl,
                       pwstore-fast,
                       SHA,
                       snap,
                       snap-core,
                       temporary,
                       text,
                       unix
  exposed-modules:     Rescoyl.Handlers,
                       Rescoyl.Simple,
                       Rescoyl.Types,
                       Rescoyl.Utils
  other-modules:
                       Paths_rescoyl
  ghc-options:         -Wall

executable rescoyl
  hs-source-dirs:      bin
  main-is:             rescoyl.hs
  build-depends:       base == 4.*,
                       cmdargs,
                       bytestring,
                       containers,
                       directory,
                       MonadCatchIO-transformers,
                       mtl,
                       rescoyl,
                       snap,
                       snap-server,
                       text
  ghc-options:         -Wall
                       -threaded
